# ProSelfLC-AT

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  LICENSE  README.md  README.rst  download.sh  setup.cfg  setup.py  upload.sh
Poster_Slide/: ProSelfLC_Poster.pptx
docs/: conf.py  index.rst
proselflc_experiments/cifar100_symmetric_noise_rate_0.2/shufflenetv2/050_proselflc_warm16_b6_transit0.3_20210904-172732/: accuracy_loss.xlsx  params.csv
src/bricks/losses/: confidencepenalty.py  crossentropy.py  labelcorrection.py  lablesmoothing.py  proselflc.py
src/proselflc/: __init__.py  exceptions.py  skeleton.py
src/proselflc/bricks/datain/datasets/: cifar100dataset.py
src/proselflc/bricks/networks/: shufflenet.py  shufflenetv2.py
src/proselflc/optim/: sgd_multistep.py
src/proselflc/slicegetter/: get_dataloader.py  get_lossfunction.py  get_network.py
src/proselflc/slices/datain/dataloaders/: cifar100dataloader.py
src/proselflc/slices/datain/datasets/: cifar100dataset.py
src/proselflc/slices/datain/transforms/: cifar100transforms.py
src/proselflc/slices/losses/: confidencepenalty.py  crossentropy.py  labelcorrection.py  lablesmoothing.py  mean_absolute_error.py  proselflc.py
src/proselflc/slices/networks/: resnet.py  shufflenetv2.py
src/proselflc/trainer/: trainer_cnn_vision.py  utils.py
tests/: conftest.py  test_cifar100_dataloader.py  test_cifar100_dataset.py  test_sgd_multistep.py  test_skeleton.py  test_trainer_cnn_vision_cifar100.py
tests/convnets/: test_trainer_cnn_vision_cifar100_cce_convets.py  test_trainer_cnn_vision_cifar100_lscplc_covnets.py  test_trainer_cnn_vision_cifar100_proselflc_covnets.py
tests/derivativemanipulation_imae/: test_dm_imae.py
tests/generic_unitests/: test_cifar100_dataloader.py  test_cifar100_dataset.py  test_confidencepenalty.py  test_crossentropy.py  test_getlossfunction.py  test_labelcorrection.py  test_labelsmoothing.py
