# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = ProSelfLC
description = Progressive Self Label Correction, CVPR 2021
author = XinshaoAmosWang
author-email = xinshaowang@gmail.com
license = gpl3
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/pyscaffold/pyscaffold/
project-urls =
    Documentation = https://pyscaffold.org/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.3a0,<4
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires = requests>=2.17.3
    pandas==1.3.2
    xlsxwriter==3.0.1
	matplotlib==3.4.3
    numpy==1.19.2
    tqdm==4.50.2
    scipy==1.7.1
    plotly==5.3.1
    ml_collections==0.1.0
    torch @ https://download.pytorch.org/whl/cu111/torch-1.9.0%%2Bcu111-cp38-cp38-linux_x86_64.whl
    torchvision @ https://download.pytorch.org/whl/cu111/torchvision-0.10.0%%2Bcu111-cp38-cp38-linux_x86_64.whl
    xlrd==1.2.0 # the version is important
    pyyaml==5.4.1

dependency_links = https://download.pytorch.org/whl/cu111/torch-1.9.0%%2Bcu111-cp38-cp38-linux_x86_64.whl#egg=torch
    https://download.pytorch.org/whl/cu111/torchvision-0.10.0%%2Bcu111-cp38-cp38-linux_x86_64.whl#egg=torchvision

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install ProSelfLC[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = proselflc.module:function
# For example:
# console_scripts =
#     fibonacci = proselflc.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov proselflc --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 88
extend-ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.3
package = proselflc
extensions =
    pre_commit
    tox
    cirrus
    pre_commit
